--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Item</th>
+                        <th>item</th>
                         <th>Price</th>
                     </tr>
                 </thead>
